scripts/tests/errors/err_method_wrong_type.bu
// Test: method on wrong type
// Expected: clean runtime error

var x = 42;
x.push(1);
